app-3/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-3
  namespace: retail-store
spec:
  selector:
    app: app-3
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
